--- a/A.S-incomes/Localization/ar.lproj/Localizable.strings
+++ b/A.S-incomes/Localization/ar.lproj/Localizable.strings
@@ -17,3 +17,6 @@
 "Username" = "اسم المستخدم";
 "Password" = "كلمة السر";
 "Login" = "تسجيل الدخول";
+"Enter new amount" = "إدخال صادر جديد";
+"Paid" = "دفعت";
+"Imports" = "الواردات";
